@@ -176,6 +176,11 @@ add_utf() is used more and should be plain add()
 we also don't emit variable names
   these could be handled like exceptions
   except that is already ugly
+one fix would be to have new relocation types for
+region start/end, then use these to represent variables
+and exceptions.  this is tricky because an otherwise dead
+block can have one of these, and that means it should be pushed
+to the successor block
 
 in gcc a declaration can also be used as a variable reference.
 the idea is, having all those extra reference objects is
